# ChangeLog for x11-wm/windowmaker
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.102 2009/10/28 21:40:31 grobian Exp $

*windowmaker-0.92.0-r8 (28 Oct 2009)

  28 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  +windowmaker-0.92.0-r8.ebuild:
  Bump, add many patches from upstream's HG, possibly fix some segfaults
  here and there, like bug #289949.  Make compatible for Prefix.  Added
  Prefix keywords.

  26 Aug 2008; Fabian Groffen <grobian@gentoo.org> metadata.xml,
  -windowmaker-0.92.0-r3.ebuild, -windowmaker-0.92.0-r4.ebuild,
  windowmaker-0.92.0-r7.ebuild:
  Add vdesktop USE-flag for Robert Wolf in bug #234066, remove old

  26 Aug 2008; Jeroen Roovers <jer@gentoo.org> windowmaker-0.92.0-r7.ebuild:
  Stable for HPPA (bug #234066).

  09 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  alpha/sparc/x86 stable wrt #234066

  09 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  stable amd64, bug 234066

  08 Aug 2008; Markus Rothe <corsair@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  Stable on ppc64; bug #234066

  08 Aug 2008; nixnut <nixnut@gentoo.org> windowmaker-0.92.0-r7.ebuild:
  Stable on ppc wrt bug 234066

  07 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  18 Jun 2008; Harald van Dĳk <truedfx@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  Don't try to add -lresolv, configure picks it up already (#226931)

  08 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/0.91.0/64bit+endian-fixes-0.9x.patch,
  -files/0.91.0/maximize-fix-0.9x.patch, -files/0.91.0/menufocus.patch,
  -windowmaker-0.91.0-r1.ebuild:
  Dropping old version, please use 0.92.0-r*

*windowmaker-0.92.0-r7 (22 Nov 2007)

  22 Nov 2007; Harald van Dĳk <truedfx@gentoo.org>
  -windowmaker-0.92.0-r6.ebuild, +windowmaker-0.92.0-r7.ebuild: