@@ -11,7 +11,7 @@ DIST WindowMaker-0.92.0.tar.gz 2758524 RMD160 b8bebed6a34696625ae0ae7c0ebcfdfc0b
 DIST WindowMaker-extra-0.1.tar.gz 238018 RMD160 94334c2c12d20a8fd0cd2a70e54cd3689f043038 SHA1 80f34cb3af705ec0f79d727b82cef28ee50fc4e7 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4
 DIST windowmaker-0.92.0-patchset-1.tar.bz2 196673 RMD160 963b1941afd2b5038845e2d89fb2dffade9c17e0 SHA1 1f01455dae4de050953dd8b1a5039cdd798449e8 SHA256 0548af8e03a3696baf868966015400c9de5438e75dff4df7392ca58c61bf9365
 DIST windowmaker-0.92.0-patchset-2.tar.bz2 220241 RMD160 f22607d4e335cd313f5a6a96799a9b74603d2a58 SHA1 b5c22443270aeb5bccba1c4ef886f46266491359 SHA256 ca2d12e00ca7ad5dbb8694430f65bb0a7ce72723403c9dea0bc9c162d2035bcd
-EBUILD windowmaker-0.92.0-r7.ebuild 5809 RMD160 a9f429f968ebfb89d6fc7f4734fdda3742066eed SHA1 eecc4f0f3c06b691d416584d2f4cdc55c7355a3a SHA256 8860de2ca603ef153cc3158669ee892a1f37762f82ca9fd16228ee16e1324ccd
-EBUILD windowmaker-0.92.0-r8.ebuild 6761 RMD160 a31f494f83628ea952863055665937e341582253 SHA1 ca6299f28fe2867055a9e308b4da14dc8ef68982 SHA256 49415507ea60361153233ba1e15a8da2d89248ad3ebbabda1d8a901558379645
-MISC ChangeLog 22708 RMD160 8c6da54f732deeb79b17e912ef94e0cfb0d927f6 SHA1 8bbd3e002367d660dc1d0e4b3f39ed42691354de SHA256 b50751a46c493da33ed3f22f07fe41be7c77a1e9edbf412015f8cacdd1ca5b08
+EBUILD windowmaker-0.92.0-r7.ebuild 5845 RMD160 bb7a1bee7eb99ad993b248601508daf26afbdd77 SHA1 b99fe0c8e2e74e1f87d60815e93d195d618820c9 SHA256 4c3982cae623481c8b135ac30d9bf9a1b65f019327491fee38aca7172fdf27f1
+EBUILD windowmaker-0.92.0-r8.ebuild 6797 RMD160 7defb199e93d7858f586bfef917da416f8b272f2 SHA1 2d6bb33c03cbc6b78f04874804de905e50512afc SHA256 77f3ac36f0aa3809706ef08eea88c40b4d72943fd8ae353dc13f17dc5d091b03
+MISC ChangeLog 22907 RMD160 a6312dbd4d376f3ba37117dbbbb237e51a0a501e SHA1 df8865afee1d8dfa8cb68e3293b2f6234a79acf2 SHA256 48b588d7b5b9965f7fcaa4b8bb7b640959e4f96764702443b4cddc8d6a4ade6a
 MISC metadata.xml 455 RMD160 41514c712d553ed4752ce045efca3d27dd036c19 SHA1 345b35512a60f3d19cf5fc4cebbfe30bd6006bf3 SHA256 7661636f854da151e83478668ff58943b0d80662f6abd2a209707d3d34b37c7c
