@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/windowmaker
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.102 2009/10/28 21:40:31 grobian Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.103 2010/01/07 08:27:40 grobian Exp $
+
+  07 Jan 2010; Fabian Groffen <grobian@gentoo.org>
+  windowmaker-0.92.0-r7.ebuild, windowmaker-0.92.0-r8.ebuild:
+  depend on x11-libs/libXinerama for USE=xinerama, thanks Brad Laue in bug
+  #299934
 
 *windowmaker-0.92.0-r8 (28 Oct 2009)
 
